# garageautomation

./: .gitignore  README.md  pyproject.toml  relaytesting_script2.py  sensortesting_script1.py  sensortesting_script2.py
Flask Endpoint/: app_simple.py
Flask Endpoint/templates/: main.html
OLD Rest Endpoint/Archive/: basic-ctrl-endpoint.py
Previous Testing/: relaytesting_script2.py
Rest Endpoint/: basic-ctrl-endpoint-NOALERTS.py  basic-ctrl-endpoint-SIMPLE.py  basic-ctrl-endpoint.py  basic-endpoint.py  door.py  endpoint.py  sysconfig.json
Working Endpoint/: endpoint.py
archive/: relaytesting_script1.py  sensortesting_script2.py
garagaeautomation/: controller.py  endpoint.py
garageautomation/: endpoint.py  sysconfig.json
garageautomation/config/: config.json
garageautomation/controller/: controller.py  door.py
prototypes/: basic-ctrl-endpoint-SIMPLE.py  loggingtesting_script1.py  sensortesting_script3.py
prototypes/Flask Endpoint/: app_simple.py
prototypes/endpoint/: basic-ctrl-endpoint.py
