[tool.poetry]
name = "garageautomation"
version = "0.1.0"
description = "Garage door automation"
authors = ["ardmhacha24 <ardmhacha@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
